--- a/restaurant/templates/restaurant/home.html
+++ b/restaurant/templates/restaurant/home.html
@@ -1,10 +1,11 @@
 {% extends "accounts/base2.html" %} {% block content %}
 <style>
   body {
-    background-image: url('https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA1L2EwMDkta2Fib29tcGljcy0wMDEuanBn.jpg');
+    background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20230618/pngtree-illustration-of-a-cartoon-style-phone-with-food-and-order-button-image_3639505.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    min-height: 100vh;
   }
 
   h2 {
@@ -45,7 +46,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-12 text-center">
-      <h2>Welcome to the Restaurant Dashboard, {{ user.name }}</h2>
+      <h2>Welcome to the Restaurant Dashboard</h2>
       <p class="lead">Manage your restaurant operations effectively!</p>
     </div>
   </div>
