--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -58,8 +58,8 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:logout' %}"
-                >Sign Out</a
+              <a class="nav-link" href="{% url 'accounts:logout' %}" 
+                 onclick="return confirmSignOut();">Sign Out</a
               >
             </li>
           </ul>
@@ -86,5 +86,10 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+    <script>
+      function confirmSignOut() {
+        return confirm("Are you sure you want to sign out?");
+      }
+    </script>
   </body>
 </html>
