--- a/accounts/templates/accounts/base1.html
+++ b/accounts/templates/accounts/base1.html
@@ -57,7 +57,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'accounts:logout' %}"
-                >Sign Out</a
+              onclick="return confirmSignOut();">Sign Out</a
               >
             </li>
           </ul>
@@ -77,5 +77,10 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+    <script>
+      function confirmSignOut() {
+        return confirm("Are you sure you want to sign out?");
+      }
+    </script>
   </body>
 </html>
