--- a/accounts/templates/accounts/base2.html
+++ b/accounts/templates/accounts/base2.html
@@ -41,12 +41,16 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'restaurant:about' restaurant_id=restaurant.id  %}"
+              <a
+                class="nav-link"
+                href="{% url 'restaurant:about' restaurant_id=restaurant.id  %}"
                 >About Us</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'restaurant:orders' restaurant_id=restaurant.id  %}"
+              <a
+                class="nav-link"
+                href="{% url 'restaurant:orders' restaurant_id=restaurant.id  %}"
                 >Orders</a
               >
             </li>
@@ -65,7 +69,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:logout' %}"
+              <a
+                class="nav-link"
+                href="{% url 'accounts:logout' %}"
+                onclick="return confirmSignOut();"
                 >Sign Out</a
               >
             </li>
@@ -75,8 +82,21 @@
     </nav>
 
     <div class="container mt-4">{% block content %}{% endblock %}</div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      function confirmSignOut() {
+        return confirm("Are you sure you want to sign out?");
+      }
+    </script>
   </body>
 </html>
